# serializer version: 1
# name: test_discrete_snapshot
  dict({
    'diagonal_mean': 1.0,
    'diagonal_std': 0.0,
    'dtype': 'float64',
    'max': 1.0,
    'mean': 1.0,
    'min': 1.0,
    'row_sums': list([
      1.0,
    ]),
    'shape': tuple(
      1,
      1,
    ),
    'std': 0.0,
    'values': list([
      list([
        1.0,
      ]),
    ]),
  })
# ---
# name: test_empirical_movement_snapshot
  dict({
    'diagonal_mean': 0.82,
    'diagonal_std': 0.059999999999999984,
    'dtype': 'float64',
    'max': 1.0,
    'mean': 0.1,
    'min': 0.0,
    'row_sums': list([
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
    ]),
    'shape': tuple(
      10,
      10,
    ),
    'std': 0.24738633753705966,
    'values': list([
      list([
        0.8,
        0.2,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.0,
        0.8,
        0.2,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.0,
        0.0,
        0.8,
        0.2,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.8,
        0.2,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.0,
        0.8,
        0.2,
        0.0,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.8,
        0.2,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.8,
        0.2,
        0.0,
        0.0,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.8,
        0.2,
        0.0,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.8,
        0.2,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        1.0,
      ]),
    ]),
  })
# ---
# name: test_empirical_movement_time_reversed_snapshot
  dict({
    'diagonal_mean': 0.8200000000000001,
    'diagonal_std': 0.059999999999999984,
    'dtype': 'float64',
    'max': 1.0,
    'mean': 0.1,
    'min': 0.0,
    'row_sums': list([
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
    ]),
    'shape': tuple(
      10,
      10,
    ),
    'std': 0.24738633753705966,
    'values': list([
      list([
        1.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.2,
        0.8,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.0,
        0.2,
        0.8,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.0,
        0.0,
        0.2,
        0.8,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.2,
        0.8,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.0,
        0.2,
        0.8,
        0.0,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.2,
        0.8,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.2,
        0.8,
        0.0,
        0.0,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.2,
        0.8,
        0.0,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.2,
        0.8,
      ]),
    ]),
  })
# ---
# name: test_identity_snapshot
  dict({
    'diagonal_mean': 1.0,
    'diagonal_std': 0.0,
    'dtype': 'float64',
    'max': 1.0,
    'mean': 0.16666666666666666,
    'min': 0.0,
    'row_sums': list([
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
    ]),
    'shape': tuple(
      6,
      6,
    ),
    'std': 0.372677996249965,
    'values': list([
      list([
        1.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.0,
        1.0,
        0.0,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.0,
        0.0,
        1.0,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        1.0,
        0.0,
        0.0,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.0,
        1.0,
        0.0,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        1.0,
      ]),
    ]),
  })
# ---
# name: test_random_walk_direction1_snapshot
  dict({
    'diagonal_mean': 0.4908711965316943,
    'diagonal_std': 0.1855857440602243,
    'dtype': 'float64',
    'max': 1.0,
    'mean': 0.1111111111111111,
    'min': 0.0,
    'row_sums': list([
      1.0000000000000002,
      1.0,
      1.0,
      0.9999999999999999,
      0.9999999999999999,
      0.9999999999999999,
      1.0,
      1.0,
      1.0,
    ]),
    'shape': tuple(
      9,
      9,
    ),
    'std': 0.18376628214549345,
    'values': list([
      list([
        0.40295550867748803,
        0.32991206707644105,
        0.18105958129938382,
        0.06660809758715265,
        0.01642535463891808,
        0.002715092860458436,
        0.0003008408641858187,
        2.2344527456173168e-05,
        1.1124685161081067e-06,
      ]),
      list([
        0.0,
        0.4029559569533035,
        0.329912434093637,
        0.1810597827226916,
        0.06660817168664655,
        0.016425372911628308,
        0.0027150958809171216,
        0.00030084119886218067,
        2.2344552313784116e-05,
      ]),
      list([
        0.0,
        0.0,
        0.4029649610249557,
        0.32991980600400167,
        0.18106382851287997,
        0.06660966004968015,
        0.016425739937433636,
        0.0027151565498746903,
        0.0003008479211742939,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.4030862286789077,
        0.3300190915616457,
        0.1811183175822111,
        0.06662970545805565,
        0.01643068307428,
        0.002715973644899722,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.0,
        0.40418398172095243,
        0.33091785573645266,
        0.1816115698194496,
        0.06681116281544751,
        0.0164754299076977,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.4109546360219759,
        0.3364611986311603,
        0.18465382090292431,
        0.06793034444393939,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.44090549839518783,
        0.3609828907373151,
        0.1981116108674971,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.5498339973124778,
        0.4501660026875221,
      ]),
      list([
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        1.0,
      ]),
    ]),
  })
# ---
# name: test_random_walk_direction2_snapshot
  dict({
    'diagonal_mean': 0.4908711965316943,
    'diagonal_std': 0.1855857440602243,
    'dtype': 'float64',
    'max': 1.0,
    'mean': 0.11111111111111113,
    'min': 0.0,
    'row_sums': list([
      1.0,
      1.0,
      0.9999999999999999,
      1.0,
      1.0,
      1.0,
      0.9999999999999999,
      0.9999999999999999,
      1.0,
    ]),
    'shape': tuple(
      9,
      9,
    ),
    'std': 0.18376628214549345,
    'values': list([
      list([
        1.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.45016600268752216,
        0.549833997312478,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.19811161086749707,
        0.36098289073731504,
        0.4409054983951878,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.0679303444439394,
        0.18465382090292434,
        0.33646119863116036,
        0.410954636021976,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.016475429907697705,
        0.06681116281544752,
        0.18161156981944965,
        0.3309178557364527,
        0.4041839817209525,
        0.0,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.0027159736448997226,
        0.016430683074280004,
        0.06662970545805565,
        0.18111831758221114,
        0.33001909156164577,
        0.40308622867890775,
        0.0,
        0.0,
        0.0,
      ]),
      list([
        0.00030084792117429383,
        0.00271515654987469,
        0.016425739937433632,
        0.06660966004968014,
        0.18106382851287994,
        0.3299198060040016,
        0.40296496102495566,
        0.0,
        0.0,
      ]),
      list([
        2.234455231378412e-05,
        0.0003008411988621807,
        0.002715095880917121,
        0.016425372911628308,
        0.06660817168664655,
        0.1810597827226916,
        0.329912434093637,
        0.40295595695330344,
        0.0,
      ]),
      list([
        1.1124685161081065e-06,
        2.2344527456173165e-05,
        0.00030084086418581864,
        0.0027150928604584355,
        0.016425354638918078,
        0.06660809758715264,
        0.1810595812993838,
        0.329912067076441,
        0.402955508677488,
      ]),
    ]),
  })
# ---
# name: test_random_walk_snapshot
  dict({
    'diagonal_mean': 0.3129204443637498,
    'diagonal_std': 0.054106427249762654,
    'dtype': 'float64',
    'max': 0.44005294083377094,
    'mean': 0.07142857142857142,
    'min': 1.970439329244888e-19,
    'row_sums': list([
      1.0,
      0.9999999999999999,
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
      1.0000000000000002,
      1.0,
      1.0000000000000002,
      1.0,
      1.0000000000000002,
      0.9999999999999999,
      1.0,
    ]),
    'shape': tuple(
      14,
      14,
    ),
    'std': 0.10627491111297678,
    'values': dict({
      'diagonal_sample': list([
        0.44005294083377094,
        0.32773403729226874,
        0.2924717130189193,
        0.28372550773807037,
        0.2822587181488455,
        0.2821050027841565,
        0.28209519073021677,
        0.2820951907302168,
        0.28210500278415657,
        0.2822587181488455,
      ]),
      'first_row': list([
        0.44005294083377094,
        0.34271357491421545,
        0.16188642995977737,
        0.04638123873004741,
        0.008059850756236855,
        0.0008495020197917202,
        5.430684721606274e-05,
        2.1057049806411945e-06,
        4.95214345824521e-08,
        7.063853263933016e-10,
        6.111430539911731e-12,
        3.2069844203505836e-14,
        1.0207128427797449e-16,
        1.970439329244888e-19,
      ]),
      'last_row': list([
        1.970439329244888e-19,
        1.0207128427797449e-16,
        3.2069844203505836e-14,
        6.111430539911731e-12,
        7.063853263933016e-10,
        4.95214345824521e-08,
        2.1057049806411945e-06,
        5.430684721606274e-05,
        0.0008495020197917202,
        0.008059850756236855,
        0.04638123873004741,
        0.16188642995977737,
        0.34271357491421545,
        0.44005294083377094,
      ]),
    }),
  })
# ---
# name: test_random_walk_with_mean_snapshot
  dict({
    'diagonal_mean': 0.3435826706663979,
    'diagonal_std': 0.0854536738856436,
    'dtype': 'float64',
    'max': 0.599381349400351,
    'mean': 0.09090909090909091,
    'min': 7.137928971059536e-17,
    'row_sums': list([
      1.0,
      1.0,
      1.0000000000000002,
      1.0,
      1.0,
      1.0,
      1.0000000000000002,
      1.0,
      1.0,
      0.9999999999999999,
      1.0,
    ]),
    'shape': tuple(
      11,
      11,
    ),
    'std': 0.1283208141140035,
    'values': dict({
      'diagonal_sample': list([
        0.599381349400351,
        0.37475824613377823,
        0.3142871118182962,
        0.3014645767284889,
        0.29980917617455083,
        0.2996949031098989,
        0.2996949031098989,
        0.29980917617455083,
        0.3014645767284889,
        0.31428711181829616,
      ]),
      'first_row': list([
        0.599381349400351,
        0.30773264561099567,
        0.08111744468783962,
        0.010978052352259043,
        0.0007627929651395526,
        2.7211871163719292e-05,
        4.98402805721443e-07,
        4.6867619594422976e-09,
        2.2627452373178817e-11,
        5.608784682243135e-14,
        7.137928971059536e-17,
      ]),
      'last_row': list([
        3.5068463717836976e-14,
        1.4147628007330728e-11,
        2.930359267475193e-09,
        3.1162224438112085e-07,
        1.7013998052385516e-05,
        0.0004769300113606697,
        0.006863936706761646,
        0.05071801338577108,
        0.19240729906371143,
        0.37475824613377823,
        0.37475824613377823,
      ]),
    }),
  })
# ---
# name: test_uniform_between_environments_snapshot
  dict({
    'diagonal_mean': None,
    'diagonal_std': None,
    'dtype': 'float64',
    'max': 0.125,
    'mean': 0.125,
    'min': 0.125,
    'row_sums': list([
      1.0,
      1.0,
      1.0,
      1.0,
      1.0,
    ]),
    'shape': tuple(
      5,
      8,
    ),
    'std': 0.0,
    'values': list([
      list([
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
      ]),
      list([
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
      ]),
      list([
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
      ]),
      list([
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
      ]),
      list([
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
        0.125,
      ]),
    ]),
  })
# ---
# name: test_uniform_within_environment_snapshot
  dict({
    'diagonal_mean': 0.14285714285714282,
    'diagonal_std': 2.7755575615628914e-17,
    'dtype': 'float64',
    'max': 0.14285714285714285,
    'mean': 0.14285714285714285,
    'min': 0.14285714285714285,
    'row_sums': list([
      0.9999999999999998,
      0.9999999999999998,
      0.9999999999999998,
      0.9999999999999998,
      0.9999999999999998,
      0.9999999999999998,
      0.9999999999999998,
    ]),
    'shape': tuple(
      7,
      7,
    ),
    'std': 0.0,
    'values': list([
      list([
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
      ]),
      list([
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
      ]),
      list([
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
      ]),
      list([
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
      ]),
      list([
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
      ]),
      list([
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
      ]),
      list([
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
        0.14285714285714285,
      ]),
    ]),
  })
# ---
